# ros2_new_code

rosbot_logger/: package.xml  setup.cfg  setup.py
rosbot_logger/config/: params.yaml
rosbot_logger/launch/: logger.launch.py
rosbot_logger/rosbot_logger/: logger_node.py
rosbot_object_detection/: package.xml  setup.cfg  setup.py
rosbot_object_detection/launch/: depthai_logger.launch.py
rosbot_object_detection/rosbot_object_detection/: depthai_logger_node.py
rosbot_obstacle_bypass/: package.xml  setup.cfg  setup.py
rosbot_obstacle_bypass/config/: params.yaml
rosbot_obstacle_bypass/launch/: bypass_node.launch.py
rosbot_obstacle_bypass/rosbot_obstacle_bypass/: bypass_node.py
xai/: package.xml  setup.cfg  setup.py
xai/launch/: xai.launch.py
