<?xml version="1.0"?>
<package format="3">
  <name>rosbot_obstacle_bypass</name>
  <version>0.1.0</version>
  <description>ROSbot extension for rosbot_obstacle_bypass</description>
  <maintainer email="you@example.com">Amit Maurya</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>